# cpp_grep

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE  README.md  WarningFlagsCMakeLists.txt
include/: cppgrep.h  grep.h  logger.h  sysutils.h  thread_pool.h
src/: cppgrep.cpp  grep.cpp  main.cpp  pagesize.cpp  sysutils.cpp  thread_pool.cpp
util/: CMakeLists.txt
util/include/util/: bool_result.h  log.h  optional_error_bool.h  sys.h  thread_pool.h
util/src/: optional_error_bool.cpp  sys.cpp  thread_pool.cpp
